--- a/MVC_MVVM/Base.lproj/Main.storyboard
+++ b/MVC_MVVM/Base.lproj/Main.storyboard
@@ -22,6 +22,19 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kme-q8-6xY">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ZUy-nm-sfj" customClass="BlogListViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZUy-nm-sfj" id="Vpb-DX-iYa">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="HXZ-BD-pJ6" kind="show" identifier="pushDetail" id="Nep-Lg-brE"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="rsj-UY-3O5"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="iAd-ng-EfX"/>
@@ -48,6 +61,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1117" y="429"/>
+        </scene>
+        <!--Blog Detail View Controller-->
+        <scene sceneID="MpF-Hi-tSK">
+            <objects>
+                <viewController storyboardIdentifier="BlogDetailViewController" id="HXZ-BD-pJ6" customClass="BlogDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iLR-fV-cV0"/>
+                        <viewControllerLayoutGuide type="bottom" id="tR5-V4-Grg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nLl-AZ-do3">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LBo-fq-nrC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1764" y="429"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vxz-3H-kDI">
